# python-project-50

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: hexlet-check.yml  lint-and-tests.yml
difference_calculator/: __init__.py
difference_calculator/core/docs_module/: doc_gendiff.py
difference_calculator/core/modules/: json_formatter.py  parse_module.py  plain.py  stylish.py
difference_calculator/scripts/: gendiff.py
gendiff/: __init__.py
gendiff/core/: cli.py  diff_generator.py  file_parser.py
gendiff/core/formatters/: choose_styler.py  format_plain.py  format_stylish.py  json_formatter.py  plain.py
gendiff/scripts/: gendiff.py
tests/: test_1.py
tests/test_data/: true_json.json  true_json_flat.json
